[workspace]
members = [
"app",
"trojan",
"errors",
"async-tls",
"service",
"command",
"acmed",
"runtime"
]
[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = "thin"
incremental = false
panic = 'unwind'
debug-assertions = false
overflow-checks = false
rpath = false


[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"