cargo-features = ["strip"]
[workspace]
members = [
"app",
"trojan",
"errors",
#"async-tls",
"service",
"command",
"acmed",
"runtime"
]
cargo-features = ["strip"]



[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"


[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"