[package]
name = "acmed"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.11", default-features = false, features = ["toml","json"] }
acme-micro = "0.11"
nix = "0.22.0"
ureq = "1.1.1"
pem = "0.8"
openssl = "0.10.29"
time = "0.1"
users = "0.11"
rand = "0.8"
log = "0.4.8"
serde = "1.0.106"
serde_json = "1"
anyhow = "1.0.28"
toml = "0.5.6"
errors = {path = "../errors"}


[target.'cfg(target_os="linux")'.dependencies]
caps = "0.5"
