[package]
name = "acmed"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acme-micro = {path = "../acme-micro"}
structopt = "0.3.14"
anyhow = "1.0.28"
log = "0.4.8"
serde = "1.0.106"
toml = "0.5.6"
#actix-web = "3"
openssl = "0.10.29"
time = "0.1"
rand = "0.8"
ureq = "1.1.1"
pem = "0.8"
config = { version = "0.11", default-features = false, features = ["toml","json"] }
serde_json = "1"
errors = {path="../errors"}

[target.'cfg(target_os="linux")'.dependencies]
caps = "0.5"