[package]
name = "app"
version = "0.1.0"
edition = "2018"

[dependencies]
trojan = {path = "../trojan"}
errors = {path = "../errors"}
async-std = "1.9.0"
env_logger = "0.8"
rustls = "0.19.1"
async-tls = {path = "../async-tls"}
tide = "0.16.0"
log = "0.4.14"
flexi_logger = { version = "0.18", features = ["async", "specfile", "compress"] }
cfg-if = "1.0.0"
futures-lite = { version = "1.7.0" }
pin-project-lite = "0.2.0"
futures-util = { version = "0.3.5", features = ["sink", "io"] }
x509-parser = "0.9.0"
serde = {version = "1.0.117"}
serde_json = "1.0.59"

clap = "3.0.0-beta.2"
anyhow = "1.0.38"
service = {path = "../service"}
bytes = "1.0.0"
once_cell = "1.5"
futures = "0.3.15"
glommio = "0.4.1"
num_cpus = "1.0"
socket2 = { version = "0.3.18", features = ["unix", "reuseport"] }
sqlx = { version = "0.5" }
command = {path = "../command"}
hyper = { version = "0.13.9", default-features = false }
dotenv = "0.15"
byteorder = "1.4.3"
crc = "2.0.0"

comfy-table = "3.0.0"
lru_time_cache = "0.11.11"
chrono = "0.4.19"
surf = "2.2.0"
async-std-resolver = { version = "0.20.2"}

#raw-socket = "0.0.2"
#netdiag = "0.2.0"
[[bin]]
name = "ostrich_node"
path = "./src/node.rs"
[[bin]]
name ="ostrich_cli"
path = "src/cli.rs"