[package]
name = "app"
version = "0.1.0"
edition = "2018"

[dependencies]
async-std = "1.9.0"
env_logger = "0.8"
rustls = "0.19.1"
log = "0.4.14"
log-panics = "2.0.0"
log4rs = "1.0.0"
cfg-if = "1.0.0"
futures-lite = { version = "1.7.0" }
pin-project-lite = "0.2.0"
futures-util = { version = "0.3.5", features = ["sink", "io"] }
serde = {version = "1.0.117"}
serde_json = "1.0.59"
glommio = "0.5.0"
#clap = "3.0.0-beta.4"
anyhow = "1.0.38"
bytes = "1.0.0"
once_cell = "1.5"
futures = "0.3.15"
num_cpus = "1.0"
socket2 = { version = "0.3.18", features = ["unix", "reuseport"] }
sqlx = { version = "0.5" }
hyper = { version = "0.13.9", default-features = false }
dotenv = "0.15"
byteorder = "1.4.3"
crc = "2.0.0"
comfy-table = "3.0.0"
chrono = "0.4.19"
surf = "2.2.0"
async-process = "1.2.0"
warp = "0.3"
warp-reverse-proxy = "0.3"
async-global-executor = {version = "2.0.2",features = ["tokio"] }
signal-hook-async-std = "0.2.1"

trojan = {path = "../trojan"}
errors = {path = "../errors"}
service = {path = "../service"}
command = {path = "../command"}
async-tls = {path = "../async-tls"}
acmed = {path = "../acmed" }

[dependencies.clap]
version = "3.0.0-beta.4"
default-features = false
features = ["std","derive"]
#raw-socket = "0.0.2"
#netdiag = "0.2.0"
[[bin]]
name = "ostrich_node"
path = "./src/node.rs"
[[bin]]
name = "ostrich_service"
path = "./src/service.rs"
[[bin]]
name ="ostrich_cli"
path = "src/cli.rs"