[package]
name = "app"
version = "0.1.0"
edition = "2018"

[dependencies]
async-std = {version = "1.10.0",default-features = false,features = ["tokio1"]}
async-io = "1.6.0"
rustls = "0.19.1"
log = "0.4.14"
log-panics = "2.0.0"
log4rs = "1.0.0"
cfg-if = "1.0.0"
futures-lite = { version = "1.7.0" }
pin-project-lite = "0.2.0"
futures-util = { version = "0.3.5", features = ["sink", "io"] }
serde = {version = "1.0.117"}
serde_json = "1.0.59"
anyhow = "1.0.38"
bytes = "1.0.0"
once_cell = "1.5"
futures = "0.3.15"
num_cpus = "1.0"
socket2 = { version = "0.3.18", features = ["unix", "reuseport"] }
sqlx = { version = "0.5" }
hyper = { version = "0.13.9", default-features = false }
byteorder = "1.4.3"
crc = "2.0.0"
comfy-table = "3.0.0"
chrono = "0.4.19"
surf = {git = "https://github.com/http-rs/surf.git", features = ["h1-client-rustls"]}
async-process = "1.2.0"
#glommio-raw = {git = "https://github.com/thirstycrow/glommio.git",branch = "optimize_network_io"}
#glommio = {git = "https://github.com/DataDog/glommio.git",branch = "master"}
glommio = "0.7.0"
ntex = { version = "0.5", features = ["glommio"] }
#glommio = {path = "../glommio" }
isahc = {version = "1.7", features = ["json"]}
#tokio = {version = "1.12.0",features = ["process"]}
#smolscale = "0.3.16"
#mimalloc = "0.1.26"
#[target.'cfg(not(target_env = "msvc"))'.dependencies]
#tikv-jemallocator = "0.4.0"
rlimit = "0.6.2"
flume = "0.10.9"
async-channel = "1.6.1"
trojan = {path = "../trojan"}
errors = {path = "../errors"}
service = {path = "../service"}
command = {path = "../command"}
#async-tls = {path = "../async-tls"}
acmed = {path = "../acmed" }

[dependencies.clap]
version = "3.0.0-beta.4"
#default-features = false
features = ["default"]



[features]
default = ["trojan/default"]



[[bin]]
name = "ostrich_node"
path = "./src/node.rs"
required-features = ["default"]
#[[bin]]
#name = "ostrich_service"
#path = "./src/service.rs"
[[bin]]
name ="ostrich_cli"
path = "src/cli.rs"
