[package]
name = "command"
version = "0.1.0"
authors = ["git <snow2flying@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
byteorder = "1.4.3"
bytes = "1.0.1"
crc = "2.0.0"
anyhow = "1.0.41"
#clap = "3.0.0-beta.2"

[dependencies.clap]
version = "3.0.0-beta.4"
default-features = false
features = ["std","derive"]