[package]
name = "service"
version = "0.1.0"
authors = ["git <snow2flying@gmail.com>"]
edition = "2018"
#build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rusqlite = {version = "0.25.1",features = ["bundled"]}
sqlx = { version = "0.5" }
async-std = {version = "1.10.0"}
#hyper = { version = "0.14", features = ["full"] }
#tokio = { version = "1" }
#tide = "0.16.0"
futures-lite = "1.11.1"
futures = "0.3.21"
async-trait = "0.1.50"
log = "0.4.14"
serde = "1.0.126"
serde_json = "1.0.64"
serde_repr = "0.1.7"
chrono = "0.4.19"
anyhow = "1.0.41"
bytes = {version = "0.5.6"}
rand = "0.8.3"
thiserror = "1.0.25"
uuid = { version = "0.8", features = ["serde", "v4"] }
ntex = { version = "0.5", features = ["glommio","rustls"] }


ntex-files = {path = "../ntex-files"}
rustls = "0.20.4"
#webpki-roots = "0.22.3"
rustls-pemfile = "1"
trojan = {path = "../trojan"}

errors = {path = "../errors"}
acmed = {path = "../acmed" }

[dependencies.serde_with]
version = "1.9.4"
features = [ "default" ]


[features]
default= ["sqlite"]
sqlite = ["sqlx/sqlite","sqlx/time","sqlx/runtime-async-std-rustls","sqlx/any"]
