[package]
name = "trojan"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
cfg-if = "1.0.0"
futures-lite = { version = "1.7.0" }
pin-project-lite = "0.2.0"
futures-util = { version = "0.3.5", features = ["sink", "io"] }
serde = "1.0.117"
serde_json = "1.0.59"
async-trait = "0.1.41"
event-listener = "2.5.1"
errors = {path = "../errors"}
#async-tls = {path = "../async-tls"}
async-std = {version = "1.10.0",default-features = false,features = ["tokio1"]}
anyhow = "1.0.38"
bytes = "1.0.0"
futures = "0.3.15"
futures-core = "0.3.17"
futures-timer = "3"
pin-project = "1.0.8"
tracing = "0.1.26"
sha2 = "0.9.5"
hex = "0.4.3"
heapless = "0.7.5"
async-channel = "1.6.1"
async-tungstenite = {version = "0.15.0"}
spin = { version = "0.9", features = ["std"] }
lru_time_cache = "0.11"
socket2 = "0.3"
#smolscale = "0.3.16"
once_cell = "1.8.0"
async-std-resolver ="0.21.0-alpha.2"
ws_stream_tungstenite = {path = "../ws_stream_tungstenite",optional = true}
tokio = {version = "1.12.0", features = ["time"]}
#glommio-raw = {git = "https://github.com/thirstycrow/glommio.git",branch = "optimize_network_io"}
glommio = {git = "https://github.com/DataDog/glommio.git",branch = "master"}
#glommio = {path = "../glommio" }

futures-rustls = {path = "../futures-rustls",default-features = false,features = ["early-data"]}

rustls = {version = "0.20",default-features = false,features = ["logging"]}
rustls-pemfile = "0.2.1"

async-io = "1.6.0"
[dev-dependencies]
bytes = "1.0.0"
#flv-util = { version = "0.5.0", features = ["fixture"] }
#fluvio-future = { version = "0.3.0", features = ["fixture", "timer"] }

[features]
default = []
#wss = ["ws_stream_tungstenite"]


